# diplomacy

./: README.md  pyproject.toml
diplomacy/contracts/: factory.vy  game.cairo  game.vy
diplomacy/web/: package-lock.json
