[tool.poetry]
name = "diplomacy"
version = "0.1.0"
description = ""
authors = ["TonyG <tonyzgao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "^3.2.2"
coloredlogs = "^15.0.1"
python-dateutil = "^2.8.2"
pytz = "^2022.1"
tornado = ">=5.0"
tqdm = "^4.64.0"
ujson = "^5.4.0"
cairo-lang = "^0.9.1"

[tool.poetry.dev-dependencies]
pylint = ">=2.3.0"
pytest = ">=4.4.0"
pytest-xdist = "^2.5.0"
Sphinx = "^5.1.1"
sphinx-copybutton = "^0.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
